# Domain-Specific-RAG-Pipeline

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  nginx.conf  pyproject.toml
app/: __init__.py  cli.py  config.py  ingestion.py  logging_config.py  main.py  mlops.py  retrieval.py
app/vector_stores/: __init__.py  pinecone_store.py
data/: eval_golden_dataset.json
docs/ai-insights/: 2026-07-15-retrieval-quality-gates.md  2026-07-17-agentic-rag-action-contracts.md  2026-07-18-rag-evaluation-drift.md  2026-07-19-mcp-tool-boundaries.md  2026-07-21-trace-to-eval-loop.md  2026-07-22-rag-evidence-tracing.md  2026-07-23-rag-context-trust-tiers.md
tests/: test_api.py  test_ingestion.py  test_retrieval.py
